fixed header input too large

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,7 +25,7 @@
     border-radius: 20px;
     padding: 0px 10px;
     width: 40%;
-    height: 5vh;
+    height: 4vh;
     font-size: 1rem;
 }
 .theme-style {
